# sqlite3_column_origin

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac  os-tests.sh  sqlite3_column_origin.c  test.sh
